center more than app

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,13 @@
             flex: 1;
             overflow-y: auto;
             width: 100%;
+            display: flex;
+            justify-content: center;
         }
 
         .container {
-            max-width: 100%;
+            max-width: 900px;
+            width: 100%;
             padding: 1rem;
         }
 
